# backend-for-chat-app-rust

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20240101000001_initial.sql
src/: auth.rs  chat.rs  db.rs  main.rs  models.rs  ws.rs
