[package]
name = "chat-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-ws = "0.2"
actix-cors = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
futures-util = "0.3"
tokio-stream = "0.1"